Fixing dark mode colors

--- a/public/src/scss/darkmode.scss
+++ b/public/src/scss/darkmode.scss
@@ -71,11 +71,10 @@ body.darkmode {
 		}
 	}
 
-
 	// Highlights
 	.chatview .line--highlight,
 	.sidebar__menu-link--highlighted {
-		background-color: #059;
+		background-color: #035;
 	}
 
 	.sidebar__menu-link .badge {
@@ -88,7 +87,7 @@ body.darkmode {
 
 	// Links
 	a {
-		color: #72bee9;
+		color: #7be;
 	}
 
 	.itemlist a {
@@ -116,8 +115,8 @@ body.darkmode {
 
 	.settings__list-item--selected,
 	.logbrowser__items a.current {
-		background-color: #72bee9;
-		border-color: #72bee9;
+		background-color: #7be;
+		border-color: #7be;
 		color: #000;
 	}
 }
